<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/tela"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/navigation_menu"
            android:layout_gravity="center_horizontal" />

    <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="left|center_vertical">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                >

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+traffic/easy"
                    android:background="@drawable/rapido"
                    android:contentDescription="@string/traffic_easy"
                    android:layout_margin="@dimen/buttons_margins"/>

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+traffic/medium"
                    android:background="@drawable/moderado"
                    android:contentDescription="@string/traffic_medium"
                    android:layout_margin="@dimen/buttons_margins"/>

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+traffic/hard"
                    android:background="@drawable/lento"
                    android:contentDescription="@string/traffic_hard"
                    android:layout_margin="@dimen/buttons_margins"/>
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/status"
                android:id="@+id/textView"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="30dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Congestionado desde dd/mm/yyyy HH:MM"
                android:id="@+id/textView2"
                android:layout_alignTop="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                android:layout_marginLeft="27dp"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+traffic/historical"
                android:background="@drawable/historico"
                android:contentDescription="@string/historical"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="22dp"/>

    </RelativeLayout>

</LinearLayout>
