<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TripActivity"
    android:orientation="vertical">


    <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/navigation_menu"
            android:layout_gravity="center_horizontal" />

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|top">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/trip_id"
                android:id="@+id/textView"
                android:layout_gravity="center|top"
                android:layout_alignBottom="@+id/editText"
                android:layout_alignParentLeft="true"/>

        <EditText
                android:layout_width="391dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:inputType="text"
                android:layout_weight="1.11"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView"
                android:layout_marginLeft="33dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/button4"
                android:layout_gravity="center_horizontal|top"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/editText"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Jardim Herplin -> Pça da Árvore"
                android:id="@+id/textView2"
                android:layout_toRightOf="@+id/button4"
                android:layout_marginLeft="22dp"
                android:layout_alignTop="@+id/textView"
                android:layout_alignParentRight="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/bus_prefix"
                android:id="@+id/textView3"
                android:layout_below="@+id/button4"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/lines_vertical_margin"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/editText2"
                android:layout_alignTop="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:layout_alignRight="@+id/button5"
                android:layout_marginTop="@dimen/lines_vertical_margin"
                android:inputType="number"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Número da Catraca"
                android:id="@+id/textView4"
                android:layout_below="@+id/editText2"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/lines_vertical_margin"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_alignRight="@+id/editText2"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignTop="@+id/textView4"
                android:layout_toRightOf="@+id/textView4"
                android:inputType="number"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/button5"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="29dp"/>

    </RelativeLayout>

</LinearLayout>
